<?xml version="1.0"?>
<package>
  <name>fformation_ros</name>
  <version>0.1.0</version>
  <description>fformation ros wrapper</description>
  <maintainer email="nathan.tsoi@yale.edu">Nathan Tsoi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
